# tuplex-public

./: .gitignore  README.md  create-and-deploy-json-lambda.sh  create-and-deploy-lambda.sh  deploy.py  upload-wheel-to-s3.sh
benchmarks/: mini-test.py
benchmarks/nextconf/hyperspecialization/: lambda-run-both.sh
benchmarks/nextconf/notebooks/: .gitignore  Per_file_type_count_github.ipynb
benchmarks/sigmod21-reproducibility/: tuplex.py
benchmarks/sigmod21/dirty_zillow/: create_conf.py
benchmarks/sigmod21/flights/: create_conf.py
benchmarks/sigmod21/logs/: create_conf.py
experimental/: 01_GithubData_workloads.ipynb  README.md
experimental/local-lambda/: docker-compose.yml
scripts/: build_linux_wheel-3.11.sh  build_python_debug_version.sh  create_lambda_zip.sh  generate_scripts.py  set_version.py
scripts/docker/ci/: Dockerfile  clean_centos.sh  create-3.11-image.sh  create-all-images.sh  install_boost.sh  install_curl.sh  install_lambda_python.sh  install_llvm.sh  install_tuplex_reqs.sh  install_zlib.sh  remove-and-install-openssl.sh
scripts/docker/tuplex/: create-image.sh
tuplex/: CMakeLists.txt
tuplex/adapters/cpython/: CMakeLists.txt
tuplex/awslambda/: CMakeLists.txt
tuplex/awslambda/src/: lambda_main.cc  main.cc  main.h
tuplex/cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  FindLibDwarf.cmake  FindSSE.cmake  FindSnappy.cmake  FindTBB.cmake
tuplex/codegen/: CMakeLists.txt
tuplex/codegen/grammar/: Python3.g4
tuplex/codegen/include/: ASTNodes.h  AnnotatedAST.h  ApatheticVisitor.h  BlockGeneratorVisitor.h  BuiltinDictProxy.h  CleanAstVisitor.h  CodegenHelper.h  FlattenedTuple.h  HashHelper.h  LLVMEnvironment.h  SymbolTable.h
tuplex/codegen/include/ast/: ASTAnnotation.h  ASTHelpers.h
tuplex/codegen/include/codegen/: CodegenHelper.h  CompiledFunction.h  ExceptionTrace.h  FlattenedTuple.h  FunctionRegistry.h  IFailable.h  IteratorContextProxy.h  LLVMEnvironment.h  LambdaFunction.h
tuplex/codegen/include/experimental/: CastHelper.h  ListHelper.h  StructDictHelper.h
tuplex/codegen/include/parser/: ASTBuilderVisitor.h
tuplex/codegen/include/visitors/: BlockGeneratorVisitor.h  IVisitor.h  TypeAnnotatorVisitor.h
tuplex/codegen/src/: ASTHelpers.cc  AnnotatedAST.cc  BlockGeneratorVisitor.cc  ClosureEnvironment.cc  CodegenHelper.cc  FlattenedTuple.cc  FunctionRegistry.cc  HashHelper.cc  IReplaceVisitor.cc  IteratorContextProxy.cc  LLVMEnvironment.cc  LambdaFunction.cc  Pipe.cc  RemoveDeadBranchesVisitor.cc  StandardModules.cc  SymbolTable.cc  TypeAnnotatorVisitor.cc
tuplex/codegen/src/ast/: ASTHelpers.cc
tuplex/codegen/src/codegen/: CodegenHelper.cc  CompiledFunction.cc  FlattenedTuple.cc  FunctionRegistry.cc  IFailable.cc  IteratorContextProxy.cc  LLVMEnvironment.cc  LambdaFunction.cc
tuplex/codegen/src/experimental/: ListHelper.cc  StructDictHelper.cc
tuplex/codegen/src/graphviz/: GraphVizBuilder.cc  GraphVizGraph.cc
tuplex/codegen/src/parser/: ASTBuilderVisitor.cc
tuplex/codegen/src/symbols/: SymbolTable.cc
tuplex/codegen/src/visitors/: BlockGeneratorVisitor.cc  IVisitor.cc  TypeAnnotatorVisitor.cc
tuplex/core/: CMakeLists.txt
tuplex/core/include/: BitmapAllocator.h  Context.h  ContextOptions.h  ContextStatistics.h  Executor.h  FilterBreakdownVisitor.h  FixedRTDyldObjectLinkingLayer.h  HistoryServerClasses.h  JITCompiler.h  TraceVisitor.h  UDF.h
tuplex/core/proto/: Lambda.proto
tuplex/core/src/: ColumnReturnRewriteVisitor.cc  ColumnRewriteVisitor.cc  Context.cc  ContextOptions.cc  DataSet.cc  Executor.cc  FilterBreakdownVisitor.cc  FixedRTDyldObjectLinkingLayer.cc  HistoryServerConnector.cc  HybridHashTable.cc  JITCompiler.cc  LocalEngine.cc  Signals.cc  TraceVisitor.cc  TransformStageExceptionReservoir.cc  UDF.cc
tuplex/github/: CMakeLists.txt  main.cc
tuplex/historyserver/thserver/: __init__.py  rest.py
tuplex/io/: CMakeLists.txt
tuplex/io/include/: AWSCommon.h  S3Cache.h  S3File.h  S3FileSystemImpl.h  S3Types.h  URI.h  VirtualFileSystem.h  VirtualFileSystemBase.h
tuplex/io/patches/: snappy.cc.diff
tuplex/io/src/: AWSCommon.cc  IFileSystemImpl.cc  PosixFileSystemImpl.cc  S3Cache.cc  S3File.cc  S3FileSystemImpl.cc  URI.cc  VirtualFileSystem.cc
tuplex/legacy/utils/: CMakeLists.txt
tuplex/python/: CMakeLists.txt  setup.py  zip_cc_runtime.py
tuplex/python/include/: PythonCommon.h  PythonContext.h  python3_sink.h
tuplex/python/src/: PythonBindings.cc  PythonCommon.cc  PythonContext.cc  PythonDataSet.cc
tuplex/python/tests/: helper.py  test_arithmetic.py  test_import.py  test_reflection.py
tuplex/python/tuplex/: context.py  distributed.py
tuplex/runtime/: CMakeLists.txt
tuplex/runtime/include/: Runtime.h
tuplex/runtime/src/: Runtime.cc  StringFunctions.cc
tuplex/test/: CMakeLists.txt
tuplex/test/codegen/: CMakeLists.txt  CallFunctions.cc  ComplexUDFs.cc  PythonFunctions.cc  TypeSystemTest.cc  UTF8Test.cc
tuplex/test/core/: AWSLambdaTest.cc  AggregateTest.cc  BetterHashing.cc  CSVRowParseGeneratorTests.cc  CacheTest.cc  CodegenHelperTest.cc  ContextBasics.cc  CustomArchiveTypes.cc  DataFrameOperations.cc  DataSetCollect.cc  DictionaryFunctions.cc  FlightDataTest.cc  FullPipelines.cc  JoinTest.cc  JsonReaderTest.cc  LLVMEnvironmentTest.cc  ListFunctions.cc  LoopTest.cc  PythonPipelineTest.cc  PythonTracer.cc  ResolveTests.cc  RowTest.cc  SerializerCodegenTest.cc  SerializerTest.cc  SignalTest.cc  TPCH.cc  TestUtils.cc  TestUtils.h  TupleAccess.cc  UDFTest.cc  UDFTyping.cc  UseCaseFunctionsTest.cc  (+2 more)
tuplex/test/hyperspecialization/: CMakeLists.txt
tuplex/test/integ/: CMakeLists.txt  TestLambda.cc  TestLocalLambda.cc  TestLocalS3.cc  TestLocalWorker.cc  WorkerAppTest.cc  helper.cc  helper.h  main.cc
tuplex/test/utils/: CMakeLists.txt  TestJSONUtils.cc  TestStringUtils.cc  TestStructCommon.cc
tuplex/test/worker/: BasicInvocation.cc  CMakeLists.txt  main.cc
tuplex/test/worker/nextconf/: FlightsQueryTest.cc  GithubQueryTest.cc  JsonSparseParse.cc  QueriesTest.cc  SparseGithubTest.cc  TestUtils.h
tuplex/utils/: CMakeLists.txt
tuplex/worker/: CMakeLists.txt
web/: landing_page.html
(+279 files in other folders)
